<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    <EditText
        android:id="@+id/inputs"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:hint="@string/add_word_vertical_1" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/inputs"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/btnAddWord"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:text="@string/add_word_button_2"/>
    <Button
        android:id="@+id/btnClose"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_alignParentRight="true"
        android:text="@string/close" />
</RelativeLayout>
